# Two-level-indexing

./: .gitmodules  CMakeLists.txt  README.md  compile.sh  generate_test.sh  prepare.sh  run_compression.sh  run_edge_cache.sh  run_indexing.sh  run_two_level.sh
compression_methods_tests/: README.md  decompress_times_rear_coding.cpp  mmap_level_rear_coding.hpp  storage_level_rear_coding.hpp
compression_methods_tests/zstd_experiments/: CMakeLists.txt  decompress_times_zstd.cpp  storage_level_zstd.hpp
compression_tests/: CMakeLists.txt  README.md  execute_compression.sh  generate_storage_rear_coding.cpp  mmap_level_zstd.hpp  prepare_compression.sh
edge_cache_tests/: CMakeLists.txt  caching_rank_1.hpp  edge_caching.hpp  generate_adversarial_query.cpp  generate_test_caching.cpp  generate_test_no_caching.cpp  mmap_level_fixed_blocks.hpp  patricia_trie.hpp  storage_level_fill_blocks.hpp
indexing_level_tests/: CMakeLists.txt  common_methods.hpp  dfuds_patricia_trie.hpp  generate_coco.cpp  louds_patricia_trie.hpp  test_FST.cpp  test_PDT.cpp  test_array.cpp  test_coco.cpp  test_dfuds.cpp  test_louds.cpp
storage_compression_tests/: README.md  decompress_times_rear_coding.cpp  decompress_times_zstd.cpp  generate_storage_zstd.cpp  storage_level_rear_coding.hpp  storage_level_zstd.hpp
two_level_tests/: CMakeLists.txt  generate_query.cpp  generate_storage.cpp  generate_test_PT.cpp  generate_test_array.cpp  mmap_level_fixed_blocks.hpp  patricia_trie.hpp  save_first_strings.cpp  storage_level_fill_blocks.hpp
